# e-commerce-analyzer

./: Makefile  README.md  pyproject.toml
data/interim/bronze/: category_translation.parquet  order_payments.parquet  products.parquet  sellers.parquet
data/processed/: mart_anomalies.parquet  mart_kpis_monthly.parquet  silver_category_translation.parquet  silver_order_payments.parquet  silver_products.parquet  silver_sellers.parquet
docs/: mkdocs.yml
docs/docs/: index.md
e_commerce_analyzer/: __init__.py  dataset.py  features.py  plots.py
e_commerce_analyzer/modeling/: predict.py  train.py
